apps/dev-currency-exchange-service/exchange-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-services
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
