apps/dev-currency-exchange-service/exchange-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: exchange
  name: exchange
  namespace: bank-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange
  template:
    metadata:
      labels:
        app: exchange
    spec:
      containers:
      - image: quay.io/amr_fahmy/dev-currency-exchange-service:v01
        name: exchange
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"        
---
