apps/dev-currency-exchange-service/exchange-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: exchange
  name: exchange
  namespace: exchange
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: exchange
---
