apps/dev-currency-exchange-service/exchange-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: exchange
  name: exchange
  namespace: bank-services
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: exchange
    weight: 100
